--- a/src/main/resources/config/framework.properties
+++ b/src/main/resources/config/framework.properties
@@ -18,4 +18,4 @@ report.type=allure
 log.level=DEBUG
 
 # Default environment (can be overridden via -Denv=qa etc.)
-default.env=qa
+default.env=dev
