Logger tunned + small refactoring;

--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -1,14 +1,13 @@
 #############################################
 # Application Configuration - DEV
 #############################################
+application.base.uri=http://3.68.165.45
+application.auth.token=dev-token-654321
 
-base.uri=http://3.68.165.45
-auth.token=dev-token-654321
+application.db.host=dev-db.company.com
+application.db.port=5432
+application.db.user=dev_user
+application.db.password=dev_password
 
-db.host=dev-db.company.com
-db.port=5432
-db.user=dev_user
-db.password=dev_password
-
-payment.service.url=https://dev-payments.company.com
-order.service.url=https://dev-orders.company.com
+application.payment.service.url=https://dev-payments.company.com
+application.order.service.url=https://dev-orders.company.com
