--- a/src/main/resources/config/application-qa.properties
+++ b/src/main/resources/config/application-qa.properties
@@ -2,18 +2,13 @@
 # Application Configuration - QA
 #############################################
 
-# API Base URL
-base.uri=https://qa-api.company.com
+application.base.uri=http://qa.spribe.com
+application.auth.token=qa-token-654321
 
-# Authentication token (example only ? better load from env var in real life)
-auth.token=qa-token-123456
+application.db.host=qa-db.company.com
+application.db.port=5432
+application.db.user=qa
+application.db.password=qa_password
 
-# Database settings (if you validate via DB)
-db.host=qa-db.company.com
-db.port=5432
-db.user=qa_user
-db.password=qa_password
-
-# Other service URLs
-payment.service.url=https://qa-payments.company.com
-order.service.url=https://qa-orders.company.com
+application.payment.service.url=https://qa-payments.company.com
+application.order.service.url=https://qa-orders.company.com
