--- a/src/main/resources/config/framework.properties
+++ b/src/main/resources/config/framework.properties
@@ -1,21 +1,20 @@
 #############################################
 # Framework Configuration
 #############################################
+# Default environment (can be overridden via -Denv=qa etc.)
+framework.active.profile=qa
 
 # Default number of threads for TestNG parallel execution
-thread.count=5
+framework.thread.count=3
 
 # Timeout in seconds for HTTP requests
-timeout=30
+framework.http.timeout=30
 
 # Number of retries for flaky tests
-retry.count=2
+framework.retry.count=2
 
 # Reporting (allure, extent, console)
-report.type=allure
+framework.report.type=allure
 
 # Log level (DEBUG, INFO, WARN, ERROR)
-log.level=DEBUG
-
-# Default environment (can be overridden via -Denv=qa etc.)
-default.env=dev
+framework.log.level=DEBUG
