--- a/src/main/resources/config/framework.properties
+++ b/src/main/resources/config/framework.properties
@@ -2,19 +2,14 @@
 # Framework Configuration
 #############################################
 # Default environment (can be overridden via -Denv=qa etc.)
-framework.active.profile=qa
-
+framework.active.profile=dev
 # Default number of threads for TestNG parallel execution
 framework.thread.count=1
-
 # Timeout in seconds for HTTP requests
 framework.http.timeout=30
-
 # Number of retries for flaky tests
 framework.retry.count=2
-
 # Reporting (allure, extent, console)
 framework.report.type=allure
-
 # Log level (DEBUG, INFO, WARN, ERROR)
 framework.log.level=DEBUG
