--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ ext {
     allureVersion = '2.30.0'
     slf4jVersion = '2.0.16'
     logbackVersion = '1.5.7'
+    jacksonVersion = '2.20.0'
+    jacksonAnnotationsVersion = '2.20'
+    jsonSchemaValidator = '5.5.6'
 }
 
 group = 'org.example'
@@ -23,9 +26,13 @@ dependencies {
     implementation "org.slf4j:slf4j-api:$slf4jVersion"
     implementation "org.testng:testng:$testngVersion"
     implementation "ch.qos.logback:logback-classic:$logbackVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonAnnotationsVersion"
 
     testImplementation "org.testng:testng:$testngVersion"
     testImplementation "io.rest-assured:rest-assured:$restAssuredVersion"
+    testImplementation "io.rest-assured:json-schema-validator:$jsonSchemaValidator"
 }
 
 test {
