--- a/src/main/resources/config/framework.properties
+++ b/src/main/resources/config/framework.properties
@@ -12,4 +12,4 @@ framework.retry.count=2
 # Reporting (allure, extent, console)
 framework.report.type=allure
 # Log level (DEBUG, INFO, WARN, ERROR)
-framework.log.level=DEBUG
+framework.log.level=INFO
